# System

./: .clang-format  .editorconfig  CMakeLists.txt
.github/workflows/: main.yml
include/System/: ClassEnumUtils.hpp  ConstExpressions.hpp  Date.h  DotNet.hpp  Encoding.hpp  Endianness.hpp  Filesystem.h  FunctionName.hpp  FunctionTraits.hpp  Guid.hpp  Library.h  LoopBreak.hpp  SourceName.hpp  String.hpp  StringSwitch.hpp  StringView.hpp  System.h  SystemCPUExtensions.h  SystemCompiler.h  SystemDetector.h  SystemExports.h  SystemInline.h  SystemMacro.h  Task.hpp  TemplateStaticStorage.hpp  ThreadPool.hpp  TypeName.hpp
include/System/Encoding/: Base64.hpp  Hex.hpp  UTF8.hpp
src/: CPUExtentions.cpp  Date.cpp  DotNet.cpp  EncodingBase64.cpp  EncodingHex.cpp  EncodingUTF8.cpp  Filesystem.cpp  Guid.cpp  Library.cpp  String.cpp  System.cpp  System_internals.cpp  WinRegister.cpp  WinRegister.h
tests/: main.cpp  shared_main.cpp
